--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "fumadocs-mdx": "^13.0.5",
     "fumadocs-ui": "^16.0.7",
     "geist": "^1.3.1",
-    "next": "16.0.0-canary.3",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
