--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fumadocs-mdx": "^13.0.5",
     "fumadocs-ui": "^16.0.7",
     "geist": "^1.3.1",
-    "next": "16.0.10",
+    "next": "latest",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
